Web Inspector: focus outline of scope bar is clipped https://bugs.webkit.org/show_bug.cgi?id=209877 <rdar://problem/61173598>
Reviewed by Timothy Hatcher.

* UserInterface/Views/ScopeBar.css:
(.scope-bar):


Canonical link: https://commits.webkit.org/223038@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@259666 268f45cc-cd09-0410-ab3c-d52691b4dbfc

--- a/Source/WebInspectorUI/UserInterface/Views/ScopeBar.css
+++ b/Source/WebInspectorUI/UserInterface/Views/ScopeBar.css
@@ -25,7 +25,6 @@
 
 .scope-bar {
     padding: 0 3px;
-    overflow: hidden;
 
     --scope-bar-margin-default: 2px;
     --scope-bar-padding-default: 6px;
